[Version 1.2.8]

Fixed:
- Fixed a crash that occurs sometimes due to poor internet connection