@@ -14,12 +14,12 @@ public class StudyTableContainerForm extends OEInventoryContainerForm<OEInventor
     @Override
     protected void addSlots(FormFlow flow) {
         this.slots = new FormContainerSlot[this.container.INVENTORY_END - this.container.INVENTORY_START + 1];
-
+        flow.next(40);
         for(int i = 0; i < this.slots.length; ++i) {
             int slotIndex = i + this.container.INVENTORY_START;
             int x = i % 10;
             int y = i / 10;
-            this.slots[i] = this.inventoryForm.addComponent(new FormContainerSlot(this.client, slotIndex, 4 + x * 40, 4 + y * 40 + 30));
+            this.slots[i] = this.inventoryForm.addComponent(new FormContainerSlot(this.client, this.container, slotIndex, 4 + x * 40, 4 + y * 40 + 30));
         }
     }
 }
