@@ -15,7 +15,7 @@ public class ToolsRackContainerForm extends OEInventoryContainerForm<OEInventory
     @Override
     protected void addSlots(FormFlow flow) {
         this.slots = new FormContainerSlot[this.container.INVENTORY_END - this.container.INVENTORY_START + 1];
-
+        flow.next(40);
         for(int i = 0; i < this.slots.length; ++i) {
             int slotIndex = i + this.container.INVENTORY_START;
             int x = i % 10;
